--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.box {
-    border: 1px solid black;
-    padding: 5px;
+#world {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25) 1px, transparent 1px), 
+        linear-gradient(90deg, rgba(0, 0, 0, 0.25) 1px, transparent 1px);
+    background-size: 25px 25px;
 }
