--- a/style.css
+++ b/style.css
@@ -6,3 +6,25 @@
         linear-gradient(90deg, rgba(0, 0, 0, 0.25) 1px, transparent 1px);
     background-size: 25px 25px;
 }
+
+.roundObject {
+    border: solid 1px black;
+
+}
+
+.roundObject:hover {
+    border: solid 1px red;
+}
+
+.round{
+border-radius: 50%;
+border: solid 1px black;
+
+}
+
+.round:active {
+border-radius: 50%;
+border: solid 1px black;
+background-color: blue;
+}
+
